# SimpleAccountSystem

./: .gitignore  README.md  settings.json
Backend/: index.js  package-lock.json  package.json  settings.json
cpp/: CMakeLists.txt  main.cpp
